istio/canary.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: colors
spec:
  hosts:
  - "boing.skytv.codefresh.io"
  gateways:
  - colors
  http:
