istio/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: colors
  namespace: colors
#  resourceVersion: "973245"
spec:
  gateways:
  - colors
  hosts:
  - boing.skytv.codefresh.io
  http:
  - route:
    - destination:
        host: colors-colors
        port:
          number: 80
      weight: 80
    # - destination:
    #     host: colors-master-24f0bdf
    #     port:
    #       number: 80
    #   weight: 20
---
